--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -3,16 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
+    "d3": "^5.16.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-d3-graph": "^2.6.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
