--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,12 +10,12 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
-    "d3": "^5.16.0",
+    "material-ui": "^0.20.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
-    "react-d3-graph": "^2.6.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
+    "react-flow-renderer": "^8.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
